--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ alembic==1.7.7
 blinker==1.4
 click==8.1.2
 dnspython==2.2.1
+dominate==2.6.0
 email-validator==1.1.3
 Flask==2.1.1
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.0
 Flask-Mail==0.9.1
 Flask-Migrate==3.1.0
@@ -19,6 +21,7 @@ MarkupSafe==2.1.1
 PyJWT==2.3.0
 python-dotenv==0.20.0
 SQLAlchemy==1.4.34
+visitor==0.1.3
 Werkzeug==2.1.1
 WTForms==3.0.1
 zipp==3.7.0
