--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 alembic==1.7.7
+arrow==1.2.2
+Babel==2.10.1
 blinker==1.4
 click==8.1.2
+dateparser==1.1.1
 dnspython==2.2.1
 dominate==2.6.0
 email-validator==1.1.3
 Flask==2.1.1
+Flask-Babel==2.0.0
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.0
 Flask-Mail==0.9.1
 Flask-Migrate==3.1.0
+Flask-Moment==1.0.2
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
@@ -18,9 +23,18 @@ itsdangerous==2.1.2
 Jinja2==3.1.1
 Mako==1.2.0
 MarkupSafe==2.1.1
+moment==0.12.1
 PyJWT==2.3.0
+python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+regex==2022.3.2
+six==1.16.0
 SQLAlchemy==1.4.34
+times==0.7
+tzdata==2022.1
+tzlocal==4.2
 visitor==0.1.3
 Werkzeug==2.1.1
 WTForms==3.0.1
